[project]
name = "quantumplayground"
version = "0.1.0"
description = ""
authors = [
    {name = "Espen K. W. Wold",email = "espenkristianwulffwold@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "qiskit (>=1.4.2,<2.0.0)",
    "qiskit-ibm-runtime (>=0.37.0,<0.38.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "qiskit-aer (>=0.17.0,<0.18.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
